--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,12 @@
     "paths": {
       "@/components/*": [
         "./components/*"
+      ],
+      "@/pages/*": [
+        "./pages/*"
+      ],
+      "@/contexts/*": [
+        "./contexts/*"
       ]
     }
   },
