--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,9 @@
       ],
       "@/contexts/*": [
         "./contexts/*"
+      ],
+      "@/constants/*": [
+        "./constants/*"
       ]
     }
   },
