Change how button reacts... is this a bit much now?

--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,16 @@
       {
         "objectsInObjects": false
       }
-    ]
+    ],
+    "no-unused-vars": [
+      "error",
+      {
+        "vars": "all",
+        "args": "after-used",
+        "ignoreRestSiblings": false
+      }
+    ],
+    
   },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
